--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Good-Food-Restaurant</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
@@ -31,41 +32,64 @@
         </div>
 
         <div class="card-container">
-          <div class="card">
-            <div class="image-box">
-              <img src="assets/pizza.png" alt="" />
+          <div>
+            <div class="card">
+              <div class="image-box">
+                <img src="assets/pizza.png" alt="" />
+              </div>
+              <div class="shop">
+                <span>Pizza Burg</span>
+              </div>
+              <h1>Up To 50% Off</h1>
+              <p>Lorem ipsum dolor sit amet.</p>
+              <button class="btn">Watch All Sell</button>
             </div>
-            <div class="shop">
-              <span>Pizza Burg</span>
+            <div class="card">
+              <div class="image-box">
+                <img src="assets/pizza.png" alt="" />
+              </div>
+              <div class="shop">
+                <span>Pizza Burg</span>
+              </div>
+              <h1>Up To 50% Off</h1>
+              <p>Lorem ipsum dolor sit amet.</p>
+              <button class="btn">Watch All Sell</button>
             </div>
-            <h1>Up To 50% Off</h1>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <button class="btn">Watch All Sell</button>
-          </div>
-          <div class="card">
-            <div class="image-box">
-              <img src="assets/pizza.png" alt="" />
+            <div class="card">
+              <div class="image-box">
+                <img src="assets/pizza.png" alt="" />
+              </div>
+              <div class="shop">
+                <span>Pizza Burg</span>
+              </div>
+              <h1>Up To 50% Off</h1>
+              <p>Lorem ipsum dolor sit amet.</p>
+              <button class="btn">Watch All Sell</button>
             </div>
-            <div class="shop">
-              <span>Pizza Burg</span>
-            </div>
-            <h1>Up To 50% Off</h1>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <button class="btn">Watch All Sell</button>
-          </div>
-          <div class="card">
-            <div class="image-box">
-              <img src="assets/pizza.png" alt="" />
-            </div>
-            <div class="shop">
-              <span>Pizza Burg</span>
-            </div>
-            <h1>Up To 50% Off</h1>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <button class="btn">Watch All Sell</button>
           </div>
         </div>
       </div>
     </section>
+
+    <section id="about-us">
+      <div class="image-container">
+          <img src="assets/foods.png" alt="Foods">
+      </div>
+      <div class="follow-us-container">
+          <div class="textarea">
+              <h1 class="title">We always make sure to provide <br> you with good food</h1>
+              <p class="subtitle">Don’t miss a thing! Subscribe to our newsletter</p>
+              <hr>
+              <p>Follow Us On</p>
+              <hr>
+              <div class="social-icons">
+                  <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+                  <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                  <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.pinterest.com" target="_blank"><i class="fab fa-pinterest"></i></a>
+              </div>
+          </div>
+      </div>
+  </section>
   </body>
 </html>
